Fixed extra space at the top of the dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@ button {
 
 .dashboard {
   display: flex;
-  margin: 24px;
+  margin: 0 24px;
   height: 100vh;
 }
 
